--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Header with Photo -->
   <header class="bg-dark text-white text-center py-5">
-    <img src="img/your-photo.jpg" alt="Your Photo" class="rounded-circle mb-3" width="120" height="120" />
+    <img src="img/IMG-20250610-WA0058.jpg" alt="Your Photo" class="rounded-circle mb-3" width="150" height="200" />
     <h1>Ervin</h1>
     <p class="lead">Student | Web Coder</p>
   </header>
@@ -76,14 +76,6 @@
         </div>
 
         <!-- Project 3 -->
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Project 3</h5>
-              <p class="card-text">Something else you’ve built or designed.</p>
-            </div>
-          </div>
-        </div>
 
         <!-- To add more projects, duplicate the block above and update content -->
       </div>
@@ -93,7 +85,7 @@
     <section id="resume" class="container py-5">
       <h2>My Resume</h2>
       <p>You can download my resume here:</p>
-      <a href="doc/Ang Jin Jie Ervin-Resume.pdf" class="btn btn-primary" download>Download Resume</a>
+      <a href="doc/Ang Jin Jie Resume.pdf" class="btn btn-primary" download>Download Resume</a>
     </section>
 
     <!-- Contact Section -->
@@ -101,7 +93,7 @@
       <h2>Contact Me</h2>
       <p>Personal Email: angjinjie@gmail.com</p>
       <p>Email: ang_jin_jie_ervin@connect.ite.edu.sga</p>
-      <p>Mobile: 8365 5609</p>
+      <p>Mobile: +65 8365 5609</p>
     </section>
   </main>
 
