--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section id="contact" class="container py-5">
       <h2>Contact Me</h2>
       <p>Personal Email: angjinjie@gmail.com</p>
-      <p>Email: ang_jin_jie_ervin@connect.ite.edu.sga</p>
+      <p>Email: ang_jin_jie_ervin@connect.ite.edu.sg</p>
       <p>Mobile: +65 8365 5609</p>
     </section>
   </main>
